3b_formatted_output_test.txt
theia@theiadocker-anhndqse1838:/home/project/final_project$ python3 
Python 3.10.12 (main, Aug 15 2025, 14:32:43) [GCC 11.4.0] on linux
Type "help", "copyright", "credits" or "license" for more information.
>>> import emotion_detection
>>> from emotion_detection import run_emotion
>>> >>> result = run_emotion("I love this new technology.")
  File "<stdin>", line 1
    >>> result = run_emotion("I love this new technology.")
    ^^
SyntaxError: invalid syntax
>>> result = run_emotion("I love this new technology.")
>>> print(result)
{'anger': 0.01364663, 'disgust': 0.0017160787, 'fear': 0.008986978, 'joy': 0.9719017, 'sadness': 0.055187024, 'dominant_emotion': 'joy'}